tests/baselines/reference/inheritanceMemberPropertyOverridingMethod.errors.txt
tests/cases/compiler/inheritanceMemberPropertyOverridingMethod.ts(8,5): error TS2424: Class 'a' defines instance member function 'x', but extended class 'b' defines it as instance member property.


==== tests/cases/compiler/inheritanceMemberPropertyOverridingMethod.ts (1 errors) ====
    class a {
        x() {
            return "20";
        }
    }
    
    class b extends a {
        x: () => string;
        ~
!!! error TS2424: Class 'a' defines instance member function 'x', but extended class 'b' defines it as instance member property.
    }